--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -5,6 +5,8 @@
 @tailwind utilities;
 
 html
+  line-height 1.7
+  font-family 'Nanum Myeongjo',-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   box-sizing border-box
 
 *, *:before, *:after
