--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -23,9 +23,19 @@ body
   padding 2cm
   background white
 
+
 .a5-landscape
   width 21cm
   max-width 100%
   height 14.8cm
   padding 2cm
 
+@media (max-width: 768px)
+  .a4 
+    padding 0.4cm
+
+  .a5-landscape
+    padding 0.4cm
+ 
+code
+  background #f2f2f2
