--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -27,7 +27,7 @@ body
 .a5-landscape
   width 21cm
   max-width 100%
-  height 14.8cm
+  min-height 14.8cm
   padding 2cm
 
 @media (max-width: 768px)
